[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "fastapi (>=0.115.11,<0.116.0)",
    "alembic>=1.15.1,<2.0.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "passlib>=1.7.4,<2.0.0",
    "python-jose>=3.4.0,<4.0.0",
    "uvicorn[standard]>=0.34.0",
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "coverage>=7.7.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.3",
]
